moving from nginx to apache

--- a/templates/default/nginx/phpmyadmin.conf.erb
+++ b/templates/default/nginx/phpmyadmin.conf.erb
@@ -1,9 +1,9 @@
 server {
-  listen <%= node[:phpmyadmin][:nginx][:port] || 80 %>;
-  server_name <%= node[:phpmyadmin][:nginx][:server_name] %>;
-  root <%= node[:phpmyadmin][:nginx][:docroot] %>;
+  listen <%= node[:phpmyadmin][:apache2][:port] || 80 %>;
+  server_name <%= node[:phpmyadmin][:apache2][:server_name] %>;
+  root <%= node[:phpmyadmin][:apache2][:docroot] %>;
   
-  access_log  <%= node[:nginx][:log_dir] %>/phpmyadmin-<%= node[:phpmyadmin][:nginx][:server_name] %>.access.log;
+  access_log  <%= node[:apache2][:log_dir] %>/phpmyadmin-<%= node[:phpmyadmin][:apache2][:server_name] %>.access.log;
   
   index index.php;
 
@@ -16,9 +16,9 @@ server {
     fastcgi_buffer_size 128k;
     fastcgi_intercept_errors on;
     include fastcgi_params;
-    fastcgi_param SCRIPT_FILENAME <%= node[:phpmyadmin][:nginx][:docroot] %>/index.php;
+    fastcgi_param SCRIPT_FILENAME <%= node[:phpmyadmin][:apache2][:docroot] %>/index.php;
     fastcgi_param SCRIPT_NAME /index.php;
-    fastcgi_pass <%= node[:phpmyadmin][:nginx][:fastcgi_server] %>;
+    fastcgi_pass <%= node[:phpmyadmin][:apache2][:fastcgi_server] %>;
   }
   
   location ~ \.php$ {
@@ -27,7 +27,7 @@ server {
     fastcgi_intercept_errors on;
     include fastcgi_params;
     fastcgi_index  index.php;
-    fastcgi_param SCRIPT_FILENAME <%= node[:phpmyadmin][:nginx][:docroot] %>$fastcgi_script_name;
-    fastcgi_pass <%= node[:phpmyadmin][:nginx][:fastcgi_server] %>;
+    fastcgi_param SCRIPT_FILENAME <%= node[:phpmyadmin][:apache2][:docroot] %>$fastcgi_script_name;
+    fastcgi_pass <%= node[:phpmyadmin][:apache2][:fastcgi_server] %>;
 	}
 }
